# pacman

./: .clang-format  .clangd  .gitignore  .tool-versions  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
assets/: map.csv
assets/map/: map.csv
assets/sprites/: blinky.aseprite  eaten.aseprite  frightened.aseprite  pacman.aseprite  pellet.aseprite  super_pellet.aseprite  wall.aseprite
include/: CMakeLists.txt
include/config/: config.hpp
include/entities/: entity.hpp
include/entities/collider/: collider.hpp
include/entities/food/: food.hpp
include/entities/ghost/: ghost.hpp
include/entities/gui_manager/: gui_manager.hpp
include/entities/pacman/: pacman.hpp
include/entities/utils/: movement.hpp
include/game/: game.hpp
include/game/controller/: game_controller.hpp
include/game/entities/: entities.hpp
include/game/input/: input_manager.hpp
include/game/map/: map.hpp
include/vec/: vec.hpp
src/: CMakeLists.txt  Entity.cpp  Entity.h  collider.cpp  collider.h  config.h  entities.cpp  entities.h  game.cpp  game.h  ghost.cpp  ghost.h  input_manager.cpp  input_manager.h  main.cpp  main.h  map.cpp  map.h  pacman.cpp  pacman.h  sprite_component.h  vec.h  window.cpp  window.h  world.cpp  world.hpp
src/components/: collider.hpp  component_registry.h  input.hpp  registry.cpp  registry.hpp  sprite.hpp  tags.hpp  tranform.hpp  velocity.hpp
src/components/input/: input_manager.cpp  input_manager.h
src/config/: config.h  config.hpp
src/ecs/: components.hpp  registry.hpp
src/entities/: entities.cpp  entities.h  entity.cpp  entity.h  entity.hpp  ghost.cpp  ghost.hpp  gui.cpp  gui.hpp  pacman.cpp  pacman.hpp  pellet.cpp  pellet.hpp  wall.cpp  wall.hpp
src/entities/collider/: collider.cpp  collider.h
src/entities/food/: food.cpp  food.h
src/entities/ghost/: ghost.cpp  ghost.h
src/entities/gui_manager/: gui_manager.cpp  gui_manager.h
src/entities/pacman/: pacman.cpp  pacman.h
src/entities/utils/: movement.h  utils.h
src/game/: collision_box.cpp  collision_box.hpp  collision_manager.cpp  collision_manager.hpp  game.cpp  game.h  game.hpp  game_state.cpp  game_state.hpp  input.cpp  input.hpp  input_manager.cpp  input_manager.hpp  map.cpp  map.hpp  sprite.cpp  sprite.hpp  utils.hpp  world.cpp  world.hpp
src/game/controller/: game_controller.cpp  game_controller.h
src/game/entities/: entities.h
src/game/input/: input_manager.cpp  input_manager.h
src/game/map/: map.cpp  map.h
src/map/: map.hpp
src/pure/: collision_box.cpp  collision_box.hpp  collision_manager.cpp  collision_manager.hpp  pacman.cpp  pacman.hpp  pellet.cpp  pellet.hpp  sprite.cpp  sprite.hpp  utils.hpp
src/registry/: registry.cpp  registry.h
src/registry/controller/: game_controller.cpp  game_controller.h
src/registry/entities/: entities.cpp  entities.h
src/registry/input/: input_manager.cpp  input_manager.h
src/registry/pacman/: pacman_registry.h
src/vec/: vec.h
tiled/: map.tmx  pacman.tiled-session  solid.tsx
